[tool.poetry]
name = "imgs2movie"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <=3.9"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
